--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Griffen Oros",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,3 +15,4 @@
     "joi": "^17.13.3"
   }
 }
+
