--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend-pressure-bros",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Griffen Oros",
